--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -44,6 +44,7 @@ div img {
     border-radius: 5px;
     font-size: 20px;
     color: white;
+        
 }
 
 .botao-amarelo:hover {
@@ -53,7 +54,7 @@ div img {
 .container {
     height: 500px;
     text-align: center;
-}
+    }
 
 .icone {
     height: 15px;
@@ -83,6 +84,8 @@ div img {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+    display: block;
+    
 }
 
 
