--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -58,6 +58,7 @@ div img {
 
 .icone {
     height: 15px;
+            
 }
 
 
@@ -104,6 +105,7 @@ div:last-child {
 table {
     width: 60%;
     text-align: center;
+    margin-left: 300px;
 }
 
 td button {
@@ -112,11 +114,13 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+    
 }
 
 .container-do-search {
     margin-top: 20px;
     height: 100px;
+    
 }
 
 
@@ -128,6 +132,8 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    margin-left: 770px;
+    margin-top: 150px;
 }
 
 #back-button:hover {
