--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h2 {
@@ -19,10 +20,17 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-width: 0 0 2px 0;
+}
+
+input:focus {
+    outline-width: 0;
+    
 }
 
 button:focus {
     color: white;
+    outline-width: 0;
 }
 
 img {
@@ -58,7 +66,16 @@ div img {
 
 .icone {
     height: 15px;
+    cursor: pointer;
             
+}
+
+.icone:hover {
+    opacity: 0.6;
+}
+
+.icone:active {
+    opacity: 1;
 }
 
 
@@ -71,21 +88,24 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
-    padding: 25px 0px 0px 0px;
+    padding-top: 150px;
 }
 
 #container-de-descricao>ol {
-    padding: 15px 0px;
+    padding: 15px 20px;
+    list-style-position: inside
 }
 
 #container-para-comprar {
     background-color: #e7eb90;
+    text-align: center;
 }
 
 #container-para-comprar>p {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+    padding: 100px 0;
     display: block;
     
 }
@@ -97,6 +117,10 @@ div img {
   *
   **/
 
+div > table {
+    margin: 0 auto;
+}
+
 div:nth-child(2),
 div:last-child {
     text-align: center;
@@ -105,7 +129,7 @@ div:last-child {
 table {
     width: 60%;
     text-align: center;
-    margin-left: 300px;
+    
 }
 
 td button {
@@ -115,6 +139,19 @@ td button {
     border-radius: 5px;
     color: black;
     
+}
+
+td button:hover {
+    background-color: #99883c;
+    cursor: pointer;
+}
+
+td button:active {
+    color: white;
+}
+
+td > img {
+    width: 50px;
 }
 
 .container-do-search {
@@ -132,10 +169,15 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
-    margin-left: 770px;
-    margin-top: 150px;
+    margin-left: 850px;
+    margin-top: 100px;
+    
 }
 
 #back-button:hover {
     background-color: #635a3d
+}
+
+.container-do-voltar {
+    text-align: center;
 }
