--- a/semana3/portfolio/style.css
+++ b/semana3/portfolio/style.css
@@ -28,12 +28,16 @@ a {
     text-decoration: none;
 }
 
+.curriculo{
+    font-size: 18px;
+}
 
 .rodape-footer{
     position: fixed;
     bottom: 0;
     width: 100%;
     font-size: 24px;
+    text-align: center;
 }
 
 .foto-perfil{
@@ -41,6 +45,14 @@ a {
     height: 300px;
     text-align: center;
     padding: 30px 10px 0px 620px;
+}
+
+#foto-projeto{
+    width: 1300px;
+    height: 580px;
+    text-align: center;
+    padding: 0px 30px 30px 120px;
+
 }
 
 h2{
@@ -54,4 +66,9 @@ h2{
 .texto-perfil{
     font-size: 24px;
     padding: 0px 0px 0px 350px;
+}
+
+.email{
+    font-size: 22px;
+    text-align: center;
 }
